--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="E:/Java/TravelPattern/fastjson-1.2.7.jar"/>
-	<classpathentry kind="lib" path="E:/Java/TravelPattern/jdom-2.0.2.jar"/>
-	<classpathentry kind="lib" path="E:/Java/TravelPattern/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="/Users/youg/git/fastjson-1.2.7.jar"/>
+	<classpathentry kind="lib" path="/Users/youg/git/jdom-2.0.2.jar"/>
+	<classpathentry kind="lib" path="/Users/youg/git/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="/Users/youg/git/org.json.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
